tests/ui/const-generics/mgca/type-const-value-type-mismatch.next.stderr
error[E0271]: type mismatch resolving `<A as Array>::LEN normalizes-to 0`
  --> $DIR/type-const-value-type-mismatch.rs:22:5
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ
   |
note: the requirement `<A as Array>::LEN normalizes-to 0` appears on the `impl`'s associated function `arr` but not on the corresponding trait's associated function
  --> $DIR/type-const-value-type-mismatch.rs:15:8
   |
LL | pub trait Array {
   |           ----- in this trait
LL |     type const LEN: usize;
LL |     fn arr() -> [u8; Self::LEN];
   |        ^^^ this trait's associated function doesn't have the requirement `<A as Array>::LEN normalizes-to 0`

error: the constant `0` is not of type `usize`
  --> $DIR/type-const-value-type-mismatch.rs:19:5
   |
LL |     type const LEN: usize = 0u8;
   |     ^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `u8`

error[E0284]: type annotations needed: cannot normalize `<A as Array>::arr::{constant#0}`
  --> $DIR/type-const-value-type-mismatch.rs:22:17
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot normalize `<A as Array>::arr::{constant#0}`

error[E0308]: mismatched types
  --> $DIR/type-const-value-type-mismatch.rs:22:17
   |
LL |     fn arr() -> [u8; const { Self::LEN }] {}
   |        ---      ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `[u8; const { Self::LEN }]`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0284, E0308.
For more information about an error, try `rustc --explain E0271`.
